--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,46 +17,46 @@
   </head>
   <body>
     <div class="mdl-grid header">
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <h1>Museum of Sex</h1>
         <h3>Virtual Reality</h3>
       </div>
     </div>
-    <div class="mdl-grid mdl-center player-data">
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+    <div class="mdl-grid text-align-center bg-color-gray">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <a href="/guest">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
             Guest
           </button>
         </a>
       </div>
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <b>Player entry page</b><br>
         Player names, heights, and genders   
       </div>
     </div>
-    <div class="mdl-grid mdl-center">
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+    <div class="mdl-grid text-align-center">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <a href="/gameplay">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
             Gameplay
           </button>
         </a>
       </div>
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <b>Gameplay control panel</b><br>
         VR experience only
       </div>
     </div>
-    <div class="mdl-grid mdl-center player-data">
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+    <div class="mdl-grid text-align-center bg-color-gray">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <a href="/qa">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
             QA
           </button>
         </a>
       </div>
-      <div class="mdl-cell mdl-cell--12-col mdl-center">
+      <div class="mdl-cell mdl-cell--12-col text-align-center">
         <b>Troubleshooting</b><br>
         All hardware and software functionalities
       </div>
