--- a/src/views/qa.html
+++ b/src/views/qa.html
@@ -696,8 +696,8 @@
         <b>Player Data</b>
       </div>
     </div>
-    <div class="mdl-grid player-data">
-      <div class="mdl-cell mdl-cell--1-col mdl-center">
+    <div class="mdl-grid bg-color-gray">
+      <div class="mdl-cell mdl-cell--1-col text-align-center">
         <b>Player #</b>
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -715,7 +715,7 @@
     </div>
     <!-- PLAYER 1-->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col mdl-center">
+      <div class="mdl-cell mdl-cell--1-col text-align-center">
         1
       </div>
       <div class="mdl-cell mdl-cell--1-col" id="player1-ison">
@@ -730,7 +730,7 @@
     <!-- END PLAYER 1-->
     <!-- PLAYER 2-->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col mdl-center">
+      <div class="mdl-cell mdl-cell--1-col text-align-center">
         2
       </div>
       <div class="mdl-cell mdl-cell--1-col" id="player2-ison">
@@ -745,7 +745,7 @@
     <!-- END PLAYER 2-->
     <!-- PLAYER 3 -->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col mdl-center">
+      <div class="mdl-cell mdl-cell--1-col text-align-center">
         3
       </div>
       <div class="mdl-cell mdl-cell--1-col" id="player3-ison">
@@ -760,7 +760,7 @@
     <!-- END PLAYER 3 -->
     <!-- PLAYER 4 -->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col mdl-center">
+      <div class="mdl-cell mdl-cell--1-col text-align-center">
         4
       </div>
       <div class="mdl-cell mdl-cell--1-col" id="player4-ison">
@@ -814,7 +814,7 @@
           GET STATE
         </button>
 
-        <button id="test" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
+        <button id="test" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
           TEST
         </button>
   -->
