updating css class names on index

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,7 +22,7 @@
         <h3>Virtual Reality</h3>
       </div>
     </div>
-    <div class="mdl-grid text-align-center bg-color-gray">
+    <div class="mdl-grid text-align-center bg-color-gray-light">
       <div class="mdl-cell mdl-cell--12-col text-align-center">
         <a href="/guest">
           <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
@@ -48,7 +48,7 @@
         VR experience only
       </div>
     </div>
-    <div class="mdl-grid text-align-center bg-color-gray">
+    <div class="mdl-grid text-align-center bg-color-gray-light">
       <div class="mdl-cell mdl-cell--12-col text-align-center">
         <a href="/qa">
           <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
