--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-.header-title {
-  font-size: 20px;
-}
-
 .reset-button {
   margin-top: 2000px;
 }
@@ -86,6 +82,18 @@
   font-size: 30px;
   text-transform: uppercase;
 }
+
+.button-transform {
+  -webkit-transition: all 2s ease;  
+  -moz-transition: all 2s ease;  
+  -o-transition: all 2s ease;  
+  -ms-transition: all 2s ease;  
+  transition: all 2s ease;
+}
+
+.button-transform-active {
+  background-color: #ff4081!important;
+}  
 
 /* Text */
 .text-align-center {
