updating player handshake code

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -393,10 +393,10 @@
           ingameState();
           console.log('ingame');
         } else if(data == 3) {
-          endState();
+          //endState();
           console.log('end');
         } else if(data == 4) {
-          resetState();
+          //resetState();
           console.log('reset');
         } else {
           console.log('invalid currentState');
